# Covid19-Statistics

./: main.py  pyproject.toml
static/css/: dark.css
templates/: graph.html  index.html  states.html
