[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "covid"
version = "0.1.0"
[tool.poetry.dependencies]
COVID19Py = "^0.3.0"
flask = "^1.1"
python = "^3.8"
[tool.poetry.dev-dependencies]
